Canvas resize working, fix for scroll stuck on stick unstick for short page

--- a/src/styles/flex-card.css
+++ b/src/styles/flex-card.css
@@ -34,18 +34,18 @@ ul.no-bullets {
 
 .flex-body-header,
 .flex-title-header {
+    font-size: 1em;
     position: relative;
     display: block;
     text-align: left;
     /* font-weight: bold; */
     align-items: center;
     justify-content: center;
-    font-size: 1.2em;
     min-height: 100%;
     height: 100%;
     width: 100%;
     max-width: 100%;
-    margin: 1em;
+    padding: 1em;
     font-weight: bold;
     /* background-color: blue; */
 }
@@ -63,6 +63,7 @@ ul.no-bullets {
 .flex-title-content,
 .flex-body-content,
 .flex-body-image {
+    font-size: 1em;
     position: relative;
     display: block;
     align-items: center;
@@ -72,7 +73,7 @@ ul.no-bullets {
     height: 100%;
     width: 100%;
     max-width: 100%;
-    margin: 1em;
+    padding: 1em;
     /* background-color: red; */
 }
 
@@ -90,6 +91,7 @@ ul.no-bullets {
         /* text-align: right; */
         /* width: 50%; */
         margin: auto;
+        font-size: 1.2em;
         padding: 1em 20%;
         font-size: 1.5em;
     }
@@ -98,7 +100,11 @@ ul.no-bullets {
         text-align: left;
     }
 
-    .flex-body-content,
+    .flex-body-content {
+        margin: auto;
+        padding: 2em 20%;
+        font-size: 1.1em;
+    }
     .flex-body-image {
         margin: auto;
         padding: 0 20%;
