--- a/src/styles/image-slicer.css
+++ b/src/styles/image-slicer.css
@@ -13,7 +13,6 @@
     left: 0;
     min-width: 0;
     min-height: 0;
-    height: 100%;
     width: 100%;
     max-height: 100%;
     max-width: 100%;
@@ -32,9 +31,10 @@
 
 .slicer-grid-wrapper {
     position: relative;
-    display: block;
-    justify-content: center;
-    align-items: center;
+    display: flex;
+    /* min-width: 100%; */
+    /* justify-content: center;
+    align-items: center; */
     margin: auto;
 }
 
